--- a/index.html
+++ b/index.html
@@ -17,6 +17,200 @@
 
 <body>
 
+
+
+
+
+
+
+  <section class="event">
+    <div>
+      <h2>Events</h2>
+      <p>고객님을 위한 스페셜한 이벤트를 통해 즐거운 행운과 경품을 만나보세요.</p>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="./img/event-bluemembers-samsung-direct-coffee-coupon-2024-banner-739x489.jpg" alt="event1">
+            <h2>삼성화재 다이렉트 자동차보험 이벤트</h2>
+            <p>자동차보험료 확인만해도 스타벅스 커피 2잔을 드립니다.</p>
+            <p>2024-01-30 ~ 2024-06-30</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./img/event-hyundaishop-bluemembers-newyears-2024-naverpay-banner-739x489.jpg" alt="event2">
+            <h2>풍요로운 설날 역대급혜택 쏟아진다!</h2>
+            <p>구매 고객 네이버페이 추첨 + 차량용품 최대 75%할인 + 무료배송</p>
+            <p>2024-01-25 ~ 2024-02-11</p>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./img/event-2024-hmc-ev-car-earlybird-benefit-banner-739x489.jpg" alt="event3">
+            <h2>2024 EV 미리 계약 이벤트</h2>
+            <p>현대자동차 EV를 푸짐한 경품과 함께 더 빨리 만나보세요!</p>
+            <p>2024-01-19 ~ 2024-02-29</p>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="notice">
+    <div>
+      <h2>현대자동차 소식</h2>
+      <ul>
+        <li><a href="#">#ALL</a></li>
+        <li><a href="#">#현대자동차</a></li>
+        <li><a href="#">#Hyundai_N</a></li>
+        <li><a href="#">#CASPER</a></li>
+        <li><a href="#">#TheFutureofMobility</a></li>
+        <li><a href="#">#about_hyundai</a></li>
+        <li><a href="#">#RC카</a></li>
+        <li><a href="#">#N_Vision</a></li>
+        <li><a href="#">#NVision74</a></li>
+        <li><a href="#">#친환경</a></li>
+        <li><a href="#">#BTS</a></li>
+        <li><a href="#">#IONIQ</a></li>
+      </ul>
+
+      <ul>
+        <li>
+          <a href="#">
+            <img src="./img/hqdefault (3).jpg" alt="notice1">
+            <p>SNS</p>
+            <p>N 컬렉션 | N Vision 74 RC카 출시 | 현대자동차</p>
+            <img src="./img/ico_youtube.png" alt="youtube">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./img/hqdefault.jpg" alt="notice2">
+            <p>SNS</p>
+            <p>2024 CES | 현장 스케치 | 현대자동차</p>
+            <img src="./img/ico_youtube.png" alt="youtube">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./img/hqdefault (2).jpg" alt="notice3">
+            <p>SNS</p>
+            <p>All Care Service | 블루기본점검 편 | 현대자동차</p>
+            <img src="./img/ico_youtube.png" alt="youtube">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="./img/hqdefault (1).jpg" alt="notice4">
+            <p>SNS</p>
+            <p>2024 CES | Ease every way - 수소 에너지 | 현대자동차</p>
+            <img src="./img/ico_youtube.png" alt="youtube">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+
+  <section class="information">
+    <div>
+      <h2>기업정보·IR정보·지속가능경영</h2>
+      <ul>
+        <li>
+          <h2>기업정보</h2>
+          <ul>
+            <li> <a href="#">기업이념</a> </li>
+            <li> <a href="#">연혁</a> </li>
+            <li> <a href="#">주요관계사</a> </li>
+            <li> <a href="#">CI</a> </li>
+            <li> <a href="#">수상내역</a> </li>
+          </ul>
+        </li>
+        <li>
+          <h2>IR 정보</h2>
+          <ul>
+            <li> <a href="#">IR 정보</a> </li>
+            <li> <a href="#">배당조회</a> </li>
+          </ul>
+        </li>
+        <li>
+          <h2>지속가능경영</h2>
+          <ul>
+            <li> <a href="#">지속가능경영</a> </li>
+            <li> <a href="#">CSV 소개</a> </li>
+            <li> <a href="#">지속가능성보고서</a> </li>
+            <li> <a href="#">사회공헌백서</a> </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+
+  <footer>
+    <div class="inner">
+      <ul>
+        <li>
+          <img src="./img/logo_footer.png" alt="logo-footer">
+        </li>
+        <li>
+          <ul>
+            <li><a href="#"></a>모바일 App</li>
+            <li><a href="#"></a>저작권안내</li>
+            <li><a href="#"></a>개인정보 처리방침</li>
+            <li><a href="#"></a>이용약관</li>
+            <li><a href="#"></a>프라이버시 센터</li>
+            <li><a href="#"></a>윤리경영 사이버 감사실</li>
+            <li><a href="#"></a>영상정보처리기기 운영관리방침</li>
+            <li><a href="#"></a>사이트맵</li>
+          </ul>
+          <p>고객센터 : 080-600-6000</p>
+          <p>COPYRIGHT ⓒ HYUNDAI MOTOR COMPANY. ALL RIGHTS RESERVED.</p>
+        </li>
+      </ul>
+
+
+      <hr>
+
+      <ul>
+        <li>
+          <img src="./img/footer-mark-wa.png" alt="footer-mark1">
+          <p>웹 접근성 품질인증</p>
+        </li>
+        <li>
+          <img src="./img/footer-mark01.png" alt="footer-mark2">
+          <p>우수디자인 지식경제부선정</p>
+        </li>
+        <li>
+          <img src="./img/footer-mark03.png" alt="footer-mark3">
+          <p>가족친화 우수기관</p>
+        </li>
+        <li>
+          <img src="./img/footer-mark04.png" alt="footer-mark4">
+          <p>2023년 한국서비스품질지수 (KS-SQI)자동차 A/S부문 9년 연속 1위</p>
+        </li>
+        <li>
+          <img src="./img/footer-mark06.png" alt="footer-mark5">
+          <p>2023년 국가고객만족도(NCSI) 조사 대상 전 부문 1위 수상 (준중형, 중형, 준대형, 대형, 컴팩트RV, 대형RV, 전기차)
+        </li>
+        <li>
+          <img src="./img/footer-mark07.png" alt="footer-mark6">
+          <p>KMAC 선정
+            2023년 한국산업의 고객만족도
+            일반승용차 부문 30년 연속
+            RV승용차 부문 20년 연속 1위
+            경형승용차 부문 / 전기자동차 부문 1위
+        </li>
+        <li>
+          <img src="./img/img_mark_ksqei.png" alt="footer-mark7">
+          <p>2023년 한국품질만족지수 (KS-QEI) 조사
+            10개 부문 1위 (승용 조사 대상 전 부문,
+            SUV-소형/준중형/대형, 럭셔리세단 E세그, 대형럭셔리SUV, 전기차, 자동차AS)</p>
+        </li>
+      </ul>
+    </div>
+  </footer>
+
 </body>
 
 </html>
