--- a/index.html
+++ b/index.html
@@ -17,7 +17,38 @@
 
 <body>
 
-  test
+  <!-- 전기차 contents -->
+  <section class="wrap-ec">
+    <h2 class="ec-mainheader">전기차</h2>
+    <p class="ec-mainsubtext">지구 환경을 품은 현대자동차의미래형 모빌리티를 경험해보세요.</p>
+    <div class="ec-body">
+      <div class="electric-car">
+        <div class="ec-img">
+          <img src="./img/electronic1.jpg" alt="아이오닉 6 사진">
+        </div>
+        <div class="ec-info">
+          <div class="ec-inner">
+            <div class="ec-badge">NEW</div>
+            <h3 class="ec-carname">아이오닉 6</h3>
+            <p class="ec-subtext">내가 만드는 세상</p>
+            <a href="#" class="ec-more">자세히 보기</a>
+          </div>
+          <div class="ec-network">
+            <h3 class="ec-network-header">충전소&서비스 네트워크</h3>
+            <p class="network-subtext">고객님의 계신 곳 근처의 충전소 및 서비스 네트워크를 안내해드립니다.<p>
+                <div class="ec-link">
+                  <a href="#" title="전기차 바로가기">전기차</a>
+                  <a href="#" title="수소전기차 바로가기">수소전기차</a>
+                </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+
+
 </body>
 
 </html>
