--- a/index.html
+++ b/index.html
@@ -35,18 +35,44 @@
           </div>
           <div class="ec-network">
             <h3 class="ec-network-header">충전소&서비스 네트워크</h3>
-            <p class="network-subtext">고객님의 계신 곳 근처의 충전소 및 서비스 네트워크를 안내해드립니다.<p>
+            <p class="network-subtext">고객님의 계신 곳 근처의 충전소 및 <br> 서비스 네트워크를 안내해드립니다.<p>
                 <div class="ec-link">
-                  <a href="#" title="전기차 바로가기">전기차</a>
-                  <a href="#" title="수소전기차 바로가기">수소전기차</a>
+                  <a href="#" title="전기차 바로가기">전기차 > </a>
+                  <a href="#" title="수소전기차 바로가기">수소전기차 > </a>
                 </div>
           </div>
         </div>
       </div>
     </div>
+  </section>
+  <!-- end 전기차 contents -->
 
+  <!-- Trendy Hyundai Contents -->
+  <section class="wrap-trendy">
+    <h2 class="title">Trendy Hyundai</h2>
+    <p class="title-subtext">현대자동차와 현대닷컴 소식을 이제 트렌드 리포트로 만나보세요.</p>
+    <div class="section-body">
+      <div class="trendy-hyundai">
+        <div class="trendy-hyundai-info">
+          <h3 class="title">Trendy <span>Hyundai</span></h3>
+          <p class="txt">모델 트렌드부터 추천 액세서리까지 <br> 매월 달라지는 소식을 기대해 주세요.</p>
+          <a href="#">자세히 보기</a>
+        </div>
+        <div class="trendy-hyundai-img">
+          <img src="./img/trendy1.jpg" alt="메인 트렌디 현대">
+        </div>
+      </div>
+    </div>
   </section>
 
+
+  <!-- End Trendy Hyundai -->
+
+  <!-- 현대 Shop Contents -->
+
+
+
+  <!-- End 현대 Shop Contents -->
 
 
 </body>
