--- a/index.html
+++ b/index.html
@@ -24,32 +24,41 @@
 
 
   <section class="event">
-    <div>
+    <div class="inner">
       <h2>Events</h2>
       <p>고객님을 위한 스페셜한 이벤트를 통해 즐거운 행운과 경품을 만나보세요.</p>
       <ul>
         <li>
           <a href="#">
-            <img src="./img/event-bluemembers-samsung-direct-coffee-coupon-2024-banner-739x489.jpg" alt="event1">
-            <h2>삼성화재 다이렉트 자동차보험 이벤트</h2>
-            <p>자동차보험료 확인만해도 스타벅스 커피 2잔을 드립니다.</p>
-            <p>2024-01-30 ~ 2024-06-30</p>
+            <div class="img-box"><img src="./img/event-bluemembers-samsung-direct-coffee-coupon-2024-banner-739x489.jpg"
+                alt="event1"></div>
+            <div class="bottom">
+              <h3>삼성화재 다이렉트 자동차보험 이벤트</h3>
+              <p>자동차보험료 확인만해도 스타벅스 커피 2잔을 드립니다.</p>
+              <p>2024-01-30 ~ 2024-06-30</p>
+            </div>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./img/event-hyundaishop-bluemembers-newyears-2024-naverpay-banner-739x489.jpg" alt="event2">
-            <h2>풍요로운 설날 역대급혜택 쏟아진다!</h2>
-            <p>구매 고객 네이버페이 추첨 + 차량용품 최대 75%할인 + 무료배송</p>
-            <p>2024-01-25 ~ 2024-02-11</p>
+            <div class="img-box"><img
+                src="./img/event-hyundaishop-bluemembers-newyears-2024-naverpay-banner-739x489.jpg" alt="event2"></div>
+            <div class="bottom">
+              <h3>풍요로운 설날 역대급혜택 쏟아진다!</h3>
+              <p>구매 고객 네이버페이 추첨 + 차량용품 최대 75%할인 + 무료배송</p>
+              <p>2024-01-25 ~ 2024-02-11</p>
+            </div>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./img/event-2024-hmc-ev-car-earlybird-benefit-banner-739x489.jpg" alt="event3">
-            <h2>2024 EV 미리 계약 이벤트</h2>
-            <p>현대자동차 EV를 푸짐한 경품과 함께 더 빨리 만나보세요!</p>
-            <p>2024-01-19 ~ 2024-02-29</p>
+            <div class="img-box"><img src="./img/event-2024-hmc-ev-car-earlybird-benefit-banner-739x489.jpg"
+                alt="event3"></div>
+            <div class="bottom">
+              <h3>2024 EV 미리 계약 이벤트</h3>
+              <p>현대자동차 EV를 푸짐한 경품과 함께 더 빨리 만나보세요!</p>
+              <p>2024-01-19 ~ 2024-02-29</p>
+            </div>
           </a>
         </li>
       </ul>
@@ -57,10 +66,10 @@
   </section>
 
   <section class="notice">
-    <div>
+    <div class="inner">
       <h2>현대자동차 소식</h2>
-      <ul>
-        <li><a href="#">#ALL</a></li>
+      <ul class="tab">
+        <li class="active"><a href="#">#ALL</a></li>
         <li><a href="#">#현대자동차</a></li>
         <li><a href="#">#Hyundai_N</a></li>
         <li><a href="#">#CASPER</a></li>
@@ -77,34 +86,42 @@
       <ul>
         <li>
           <a href="#">
-            <img src="./img/hqdefault (3).jpg" alt="notice1">
-            <p>SNS</p>
-            <p>N 컬렉션 | N Vision 74 RC카 출시 | 현대자동차</p>
-            <img src="./img/ico_youtube.png" alt="youtube">
+            <div class="img-box"><img src="./img/hqdefault (3).jpg" alt="notice1"></div>
+            <div class="bottom">
+              <p>SNS</p>
+              <!-- <p>N 컬렉션 | N Vision 74 RC카 출시 | 현대자동차</p> -->
+              <img src="./img/ico_youtube.png" alt="youtube">
+            </div>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./img/hqdefault.jpg" alt="notice2">
-            <p>SNS</p>
-            <p>2024 CES | 현장 스케치 | 현대자동차</p>
-            <img src="./img/ico_youtube.png" alt="youtube">
+            <div class="img-box"><img src="./img/hqdefault.jpg" alt="notice2"> </div>
+            <div class="bottom">
+              <p>SNS</p>
+              <!-- <p>2024 CES | 현장 스케치 | 현대자동차</p> -->
+              <img src="./img/ico_youtube.png" alt="youtube">
+            </div>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./img/hqdefault (2).jpg" alt="notice3">
-            <p>SNS</p>
-            <p>All Care Service | 블루기본점검 편 | 현대자동차</p>
-            <img src="./img/ico_youtube.png" alt="youtube">
+            <div class="img-box"> <img src="./img/hqdefault (2).jpg" alt="notice3"> </div>
+            <div class="bottom">
+              <p>SNS</p>
+              <!-- <p>All Care Service | 블루기본점검 편 | 현대자동차</p> -->
+              <img src="./img/ico_youtube.png" alt="youtube">  
+            </div>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./img/hqdefault (1).jpg" alt="notice4">
-            <p>SNS</p>
-            <p>2024 CES | Ease every way - 수소 에너지 | 현대자동차</p>
-            <img src="./img/ico_youtube.png" alt="youtube">
+            <div class="img-box"><img src="./img/hqdefault (1).jpg" alt="notice4"></div>
+            <div class="bottom">
+              <p>SNS</p>
+              <!-- <p>2024 CES | Ease every way - 수소 에너지 | 현대자동차</p> -->
+              <img src="./img/ico_youtube.png" alt="youtube">  
+            </div>
           </a>
         </li>
       </ul>
@@ -113,7 +130,7 @@
 
 
   <section class="information">
-    <div>
+    <div class="inner">
       <h2>기업정보·IR정보·지속가능경영</h2>
       <ul>
         <li>
@@ -149,7 +166,7 @@
 
   <footer>
     <div class="inner">
-      <ul>
+      <ul class="footer1">
         <li>
           <img src="./img/logo_footer.png" alt="logo-footer">
         </li>
@@ -160,6 +177,8 @@
             <li><a href="#"></a>개인정보 처리방침</li>
             <li><a href="#"></a>이용약관</li>
             <li><a href="#"></a>프라이버시 센터</li>
+          </ul>
+          <ul>
             <li><a href="#"></a>윤리경영 사이버 감사실</li>
             <li><a href="#"></a>영상정보처리기기 운영관리방침</li>
             <li><a href="#"></a>사이트맵</li>
@@ -172,7 +191,7 @@
 
       <hr>
 
-      <ul>
+      <ul class="footer2">
         <li>
           <img src="./img/footer-mark-wa.png" alt="footer-mark1">
           <p>웹 접근성 품질인증</p>
@@ -187,25 +206,26 @@
         </li>
         <li>
           <img src="./img/footer-mark04.png" alt="footer-mark4">
-          <p>2023년 한국서비스품질지수 (KS-SQI)자동차 A/S부문 9년 연속 1위</p>
+          <p>2023년 한국서비스품질지수 (KS-SQI)자동차 <br>A/S부문 9년 연속 1위</p>
         </li>
         <li>
           <img src="./img/footer-mark06.png" alt="footer-mark5">
-          <p>2023년 국가고객만족도(NCSI) 조사 대상 전 부문 1위 수상 (준중형, 중형, 준대형, 대형, 컴팩트RV, 대형RV, 전기차)
+          <p>2023년 국가고객만족도(NCSI) 조사 대상 <br>전 부문 1위 수상 (준중형, 중형, 준대형, 대형, <br>컴팩트RV, 대형RV, 전기차)
         </li>
         <li>
           <img src="./img/footer-mark07.png" alt="footer-mark6">
-          <p>KMAC 선정
-            2023년 한국산업의 고객만족도
-            일반승용차 부문 30년 연속
-            RV승용차 부문 20년 연속 1위
+          <p>KMAC 선정<br>
+            2023년 한국산업의 고객만족도<br>
+            일반승용차 부문 30년 연속<br>
+            RV승용차 부문 20년 연속 1위<br>
             경형승용차 부문 / 전기자동차 부문 1위
         </li>
         <li>
           <img src="./img/img_mark_ksqei.png" alt="footer-mark7">
-          <p>2023년 한국품질만족지수 (KS-QEI) 조사
-            10개 부문 1위 (승용 조사 대상 전 부문,
-            SUV-소형/준중형/대형, 럭셔리세단 E세그, 대형럭셔리SUV, 전기차, 자동차AS)</p>
+          <p>2023년 한국품질만족지수 (KS-QEI) 조사<br>
+            10개 부문 1위 (승용 조사 대상 전 부문,<br>
+            SUV-소형/준중형/대형, 럭셔리세단 E세그,<br>
+            대형럭셔리SUV, 전기차, 자동차AS)</p>
         </li>
       </ul>
     </div>
