Shop 현대 (HTML 시작)

--- a/index.html
+++ b/index.html
@@ -64,12 +64,64 @@
       </div>
     </div>
   </section>
-
-
   <!-- End Trendy Hyundai -->
 
   <!-- 현대 Shop Contents -->
-
+  <section class="wrap-shop">
+    <h2 class="title">현대 Shop</h2>
+    <p class="title-subtext">현대자동차 공식 온라인몰에서 다양한 상품을 확인해보세요.</p>
+    <div class="section-body">
+      <ul class="story-list">
+        <li>
+          <a href="#">
+            <div class="img"><img src="./img/story1.jpg" alt="스토리1"></div>
+            <div class="story-txt">겨울철 영하로 뚝 떨어진 날씨에 걱정되는 내차</div>
+        </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="img"><img src="./img/story2.jpg" alt="스토리2"></div>
+            <div class="story-txt">추운 겨울, 자동차 시동이 안걸려요!</div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="img"><img src="./img/story3.jpg" alt="스토리3"></div>
+            <div class="story-txt">2024년 새로운 키워드!</div>
+          </a>
+        </li>
+      </ul>
+      <div class="shop-best-wrap">
+        <div class="view-more">
+          <h3 class="title">현대 Shop Best
+            <a href="#">더보기</a>
+          </h3>
+          <div class="txt">
+            지금 현대Shop에서 <br>
+            인기 있는 상품이에요
+          </div>
+          <ul class="best-list">
+            <li>
+              <a href="#">
+                <div class="ranking">1</div>
+                <div class="list-img"><img src="./img/shop1.jpg"></div>
+                <div class="productwrap">
+                  <div class="product">[안방그릴] 연기 잡는 전기그릴 안방그릴 파워 시즌5 AB901MF (전용가방＋필터 포함)</div>
+                  <div class="pricewrap">
+                    <div class="discount">20% ↓</div>
+                    <div class="price"><strong>199,000</strong> 원</div>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!-- End 현대 Shop Contents -->
