--- a/index.html
+++ b/index.html
@@ -1,31 +1,112 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hyundai (ICT 연습)</title>
-
-
-<!-- 파비콘 넣기 -->
-<link rel="shortcut icon" href="" type="icon/x-icon">
-
-<!-- Custom CSS -->
-<link rel="stylesheet" href="./css/main.css">
-
-
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- 파비콘 넣기 -->
+  <link rel="shortcut icon" href="" type="icon/x-icon">
 
-
-
-
-
-
-
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="./css/main.css">
+  <script src="https://kit.fontawesome.com/553b3d4eda.js" crossorigin="anonymous"></script>
 </head>
 
-
-
 <body>
+  <header class="top_main">
+
+    <div class="main_header">
+      <div class="inner_wrap">
+        <div class="img-log"><a href="#"></a></div>
+        <ul>
+          <li><button>모델</button></li>
+          <li><button>구매/이벤트</button></li>
+          <li><button>서비스/멤버십</button></li>
+          <li><button>디지털/고객지원</button></li>
+          <li><button>브랜드</button></li>
+          <li><button><img src="./img/hyundai_shop_logo.png"></button></li>
+        </ul>
+        <div>
+          <a href=""><b style="font-weight: bold;">Trendy</b>Hyundai</a>
+
+          <button class="btn-1">kr<i class="fa-solid fa-caret-down"></i></button>
+          <button><i class="fa-solid fa-user"></i></button>
+          <button><i class="fa-solid fa-magnifying-glass"></i></button>
+          <button><i class="fa-solid fa-bars"></i></button>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="txt-wrap">
+      <a class="text-1">세계에서 인정받은</a>
+      <a class="text-2">아이오닉6</a>
+
+      <button class="btn-less"><i class="fa-solid fa-less-than"></i></button>
+      <button class="btn-than"><i class="fa-solid fa-greater-than"></i></button>
+      <div><a class="text-3">CASPER</a></div>
+      <div><a class="text-4">The new Tuscson</a></div>
+      <a class="main-content">메인사진버튼</a>
+
+      <div>
+        <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
+        <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
+        <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
+        <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
+        <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
+        <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
+        <button class="btn-2"><i class="fa-solid fa-play"></i></button>
+      </div>
+
+      <div class="quick-menu">
+        <div class="quick-menu1"> 
+          <button><i class="fa-solid fa-less-than"></i></button>
+          <button><img src="./img/ico_estimation.png" alt="">견적내기</button>
+          <button><img src="./img/ico_purchase_consult.png" alt="">구매상담</button>
+          <button><img src="./img/ico_test_driving.png" alt="">시승신청</button>
+          <button><img src="./img/ico_customer_branch.png" alt="">판매처 검색</button>
+          <button><img src="./img/ico_monthly_benefit.png" alt="">구매혜택</button>
+          <button><img src="./img/ico_service_reservation.png" alt="">정비예약</button>
+          <button>></button>
+        </div>
+        <div class="quick-menu2">
+            <button></button>
+            <button></button>
+        </div>
+
+      </div>
+
+  </header>
+
+  
+
+  <section class="section-2">
+
+    <div class="content_2">
+      <h2>Model</h2>
+      <p>최근 한 달 동안 고객님들이 가장 많이 구매하신 모델입니다.</p>
+      <div>
+        <a href=""><img src="" alt=""></a>
+        <div>
+          <button>전체</button>
+          <button>2~30대</button>
+          <button>40대</button>
+          <button>50대</button>
+          <a href="">1위. 디 올 뉴 싼타페 Hybrid</a>
+          <button><img src="" alt="">2위. 더 뉴 아반떼</button>
+          <button><img src="" alt="">3위. 디 올 뉴 그랜저 Hybrid</button>
+        </div>
+      </div>
+
+    </div>
+
+
+  </section>
+
+
+
+
 
 
 
