Shop 현대 (HTML 완) (CSS 수정중)

--- a/index.html
+++ b/index.html
@@ -114,16 +114,49 @@
                 </div>
               </a>
             </li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+              <a href="#">
+                <div class="ranking">2</div>
+                <div class="list-img"><img src="./img/shop2.jpg"></div>
+                <div class="productwrap">
+                  <div class="product">[신차필수템][디테일링] 괴물흡입력 17,000Pa BLDC 핸디형 무선청소기</div>
+                  <div class="pricewrap">
+                    <div class="discount">27% ↓</div>
+                    <div class="price"><strong>89,000</strong>원</div>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="ranking">3</div>
+                <div class="list-img"><img src="./img/shop3.jpg"></div>
+                <div class="productwrap">
+                  <div class="product">[다이슨] DYSON 에어랩 멀티 컴플리트 니켈/코퍼＋정품 여행용 파우치 증정</div>
+                  <div class="pricewrap">
+                    <div class="discount">11% ↓</div>
+                    <div class="price"><strong>670,000</strong>원</div>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <div class="ranking">4</div>
+                <div class="list-img"><img src="./img/shop4.jpg"></div>
+                <div class="productwrap">
+                  <div class="product">[샤오토] SUV 트렁크 매트 풀커버</div>
+                  <div class="pricewrap">
+                    <div class="price"><strong>81,000</strong>원</div>
+                  </div>
+                </div>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
     </div>
   </section>
-
-
   <!-- End 현대 Shop Contents -->
 
 
