--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <div class="img-box"><img src="./img/hqdefault (3).jpg" alt="notice1"></div>
             <div class="bottom">
               <p>SNS</p>
-              <!-- <p>N 컬렉션 | N Vision 74 RC카 출시 | 현대자동차</p> -->
-              <img src="./img/ico_youtube.png" alt="youtube">
+              <h3>N 컬렉션 | N Vision 74 RC카 출시 | 현대자동차</h3>
+              <span><img src="./img/ico_youtube.png" alt="유튜브 로고"></span>
             </div>
           </a>
         </li>
@@ -99,8 +99,8 @@
             <div class="img-box"><img src="./img/hqdefault.jpg" alt="notice2"> </div>
             <div class="bottom">
               <p>SNS</p>
-              <!-- <p>2024 CES | 현장 스케치 | 현대자동차</p> -->
-              <img src="./img/ico_youtube.png" alt="youtube">
+              <h3>2024 CES | 현장 스케치 | 현대자동차</h3>
+              <span><img src="./img/ico_youtube.png" alt="유튜브 로고"></span>
             </div>
           </a>
         </li>
@@ -109,8 +109,8 @@
             <div class="img-box"> <img src="./img/hqdefault (2).jpg" alt="notice3"> </div>
             <div class="bottom">
               <p>SNS</p>
-              <!-- <p>All Care Service | 블루기본점검 편 | 현대자동차</p> -->
-              <img src="./img/ico_youtube.png" alt="youtube">  
+              <h3>All Care Service | 블루기본점검 편 | 현대자동차</h3>
+              <span><img src="./img/ico_youtube.png" alt="유튜브 로고"></span>
             </div>
           </a>
         </li>
@@ -119,8 +119,8 @@
             <div class="img-box"><img src="./img/hqdefault (1).jpg" alt="notice4"></div>
             <div class="bottom">
               <p>SNS</p>
-              <!-- <p>2024 CES | Ease every way - 수소 에너지 | 현대자동차</p> -->
-              <img src="./img/ico_youtube.png" alt="youtube">  
+              <h3>2024 CES | Ease every way - 수소 에너지 | 현대자동차</h3>
+              <span><img src="./img/ico_youtube.png" alt="유튜브 로고"></span>
             </div>
           </a>
         </li>
@@ -134,7 +134,7 @@
       <h2>기업정보·IR정보·지속가능경영</h2>
       <ul>
         <li>
-          <h2>기업정보</h2>
+          <h3>기업정보</h3>
           <ul>
             <li> <a href="#">기업이념</a> </li>
             <li> <a href="#">연혁</a> </li>
@@ -143,15 +143,17 @@
             <li> <a href="#">수상내역</a> </li>
           </ul>
         </li>
+        <hr style="border:0; width:1px; background: #ddd;">
         <li>
-          <h2>IR 정보</h2>
-          <ul>
+          <h3>IR 정보</h3>
+          <ul class="ir">
             <li> <a href="#">IR 정보</a> </li>
             <li> <a href="#">배당조회</a> </li>
           </ul>
         </li>
+        <hr style="border:0; width:1px; background: #ddd;">
         <li>
-          <h2>지속가능경영</h2>
+          <h3>지속가능경영</h3>
           <ul>
             <li> <a href="#">지속가능경영</a> </li>
             <li> <a href="#">CSV 소개</a> </li>
@@ -174,7 +176,7 @@
           <ul>
             <li><a href="#"></a>모바일 App</li>
             <li><a href="#"></a>저작권안내</li>
-            <li><a href="#"></a>개인정보 처리방침</li>
+            <li><a href="#"><span>개인정보 처리방침</span></a></li>
             <li><a href="#"></a>이용약관</li>
             <li><a href="#"></a>프라이버시 센터</li>
           </ul>
@@ -189,7 +191,8 @@
       </ul>
 
 
-      <hr>
+      <hr style="border:0; height:1px; background: #333;">
+
 
       <ul class="footer2">
         <li>
@@ -210,7 +213,7 @@
         </li>
         <li>
           <img src="./img/footer-mark06.png" alt="footer-mark5">
-          <p>2023년 국가고객만족도(NCSI) 조사 대상 <br>전 부문 1위 수상 (준중형, 중형, 준대형, 대형, <br>컴팩트RV, 대형RV, 전기차)
+          <p>2023년 국가고객만족도(NCSI) 조사 대상 전 <br>부문 1위 수상 (준중형, 중형, 준대형, 대형, <br>컴팩트RV, 대형RV, 전기차)
         </li>
         <li>
           <img src="./img/footer-mark07.png" alt="footer-mark6">
