--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <a href="#">
             <div class="img"><img src="./img/story1.jpg" alt="스토리1"></div>
             <div class="story-txt">겨울철 영하로 뚝 떨어진 날씨에 걱정되는 내차</div>
-        </a>
+          </a>
         </li>
         <li>
           <a href="#">
@@ -100,60 +100,61 @@
             지금 현대Shop에서 <br>
             인기 있는 상품이에요
           </div>
-          <ul class="best-list">
-            <li>
-              <a href="#">
-                <div class="ranking">1</div>
-                <div class="list-img"><img src="./img/shop1.jpg"></div>
-                <div class="productwrap">
-                  <div class="product">[안방그릴] 연기 잡는 전기그릴 안방그릴 파워 시즌5 AB901MF (전용가방＋필터 포함)</div>
-                  <div class="pricewrap">
-                    <div class="discount">20% ↓</div>
-                    <div class="price"><strong>199,000</strong> 원</div>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div class="ranking">2</div>
-                <div class="list-img"><img src="./img/shop2.jpg"></div>
-                <div class="productwrap">
-                  <div class="product">[신차필수템][디테일링] 괴물흡입력 17,000Pa BLDC 핸디형 무선청소기</div>
-                  <div class="pricewrap">
-                    <div class="discount">27% ↓</div>
-                    <div class="price"><strong>89,000</strong>원</div>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div class="ranking">3</div>
-                <div class="list-img"><img src="./img/shop3.jpg"></div>
-                <div class="productwrap">
-                  <div class="product">[다이슨] DYSON 에어랩 멀티 컴플리트 니켈/코퍼＋정품 여행용 파우치 증정</div>
-                  <div class="pricewrap">
-                    <div class="discount">11% ↓</div>
-                    <div class="price"><strong>670,000</strong>원</div>
-                  </div>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div class="ranking">4</div>
-                <div class="list-img"><img src="./img/shop4.jpg"></div>
-                <div class="productwrap">
-                  <div class="product">[샤오토] SUV 트렁크 매트 풀커버</div>
-                  <div class="pricewrap">
-                    <div class="price"><strong>81,000</strong>원</div>
-                  </div>
-                </div>
-              </a>
-            </li>
-          </ul>
         </div>
+        <ul class="best-list">
+          <li>
+            <a href="#">
+              <div class="ranking">1</div>
+              <div class="list-img"><img src="./img/shop1.jpg"></div>
+              <div class="productwrap">
+                <div class="product">[안방그릴] 연기 잡는 전기그릴 안방그릴 파워 시즌5····</div>
+                <div class="pricewrap">
+                  <div class="discount">20% ↓</div>
+                  <div class="price"><strong>199,000</strong> 원</div>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="ranking">2</div>
+              <div class="list-img"><img src="./img/shop2.jpg"></div>
+              <div class="productwrap">
+                <div class="product">[신차필수템][디테일링] 괴물흡입력 17,000Pa BLDC····</div>
+                <div class="pricewrap">
+                  <div class="discount">27% ↓</div>
+                  <div class="price"><strong>89,000</strong>원</div>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="ranking">3</div>
+              <div class="list-img"><img src="./img/shop3.jpg"></div>
+              <div class="productwrap">
+                <div class="product">[다이슨] DYSON 에어랩 멀티 컴플리트 니켈/코퍼＋정품····</div>
+                <div class="pricewrap">
+                  <div class="discount">11% ↓</div>
+                  <div class="price"><strong>670,000</strong>원</div>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="ranking">4</div>
+              <div class="list-img"><img src="./img/shop4.jpg"></div>
+              <div class="productwrap">
+                <div class="product">[샤오토] SUV 트렁크 매트 풀커버</div>
+                <div class="pricewrap">
+                  <div class="price"><strong>81,000</strong>원</div>
+                </div>
+              </div>
+            </a>
+          </li>
+        </ul>
+
       </div>
     </div>
   </section>
