주말전업뎃

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <button class="btn-than"><i class="fa-solid fa-greater-than"></i></button>
       <div><a class="text-3">CASPER</a></div>
       <div><a class="text-4">The new Tuscson</a></div>
-      <a class="main-content">메인사진버튼</a>
+      <a class="main-content"></a>
 
       <div>
         <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="quick-menu">
-        <div class="quick-menu1"> 
+        <div class="quick-menu1">
           <button><i class="fa-solid fa-less-than"></i></button>
           <button><img src="./img/ico_estimation.png" alt="">견적내기</button>
           <button><img src="./img/ico_purchase_consult.png" alt="">구매상담</button>
@@ -68,42 +68,63 @@
           <button><img src="./img/ico_customer_branch.png" alt="">판매처 검색</button>
           <button><img src="./img/ico_monthly_benefit.png" alt="">구매혜택</button>
           <button><img src="./img/ico_service_reservation.png" alt="">정비예약</button>
-          <button>></button>
+          <button><i class="fa-solid fa-greater-than"></i></button>
         </div>
         <div class="quick-menu2">
-            <button></button>
-            <button></button>
+          <button></button>
+          <button></button>
         </div>
 
       </div>
 
   </header>
 
-  
+
 
   <section class="section-2">
 
     <div class="content_2">
       <h2>Model</h2>
       <p>최근 한 달 동안 고객님들이 가장 많이 구매하신 모델입니다.</p>
-      <div>
-        <a href=""><img src="" alt=""></a>
-        <div>
+      <div class="model1">
+        <a href="" class="model1-1">
+          <div>1위</div><img src="./img/MX04_EXT.jpg" alt="">
+        </a>
+        <div class="model2">
           <button>전체</button>
           <button>2~30대</button>
           <button>40대</button>
           <button>50대</button>
+        </div>
+        <div class="model3">
           <a href="">1위. 디 올 뉴 싼타페 Hybrid</a>
-          <button><img src="" alt="">2위. 더 뉴 아반떼</button>
-          <button><img src="" alt="">3위. 디 올 뉴 그랜저 Hybrid</button>
+          <button><img src="./img/CN12_EXT.jpg" alt="">2위. 더 뉴 아반떼</button>
+          <button><img src="./img/GN02_EXT.jpg" alt="">3위. 디 올 뉴 그랜저 Hybrid</button>
         </div>
       </div>
+    </div>
 
     </div>
 
 
   </section>
 
+
+
+  <section class="section-5">
+    <div class="section-main5">
+      <div>
+        <h2>Brand</h2>
+        <p>지속가능한 미래로의 연결을 추구하는 현대자동차의 브랜드 캠패인을 만나보세요.</p>
+      </div>
+      <div class="section-brand">
+        <button><img src="./img/hyundai-hmgics-kv-w.jpg" alt=""></button>
+        <button><img src="./img/hyundai-ioniq6-awards-kv-w.jpg" alt=""></button>
+        <button><img src="./img/hyundai-ioniq5-n-kv-w.jpg" alt=""></button>
+        <button><img src="./img/new-dedicated-ev-plant-ulsan-kv-w.jpg" alt=""></button>
+      </div>
+    </div>
+  </section>
 
 
 
