--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./css/main.css">
 
+    <!-- font awesome download js code -->
+    <script src="https://kit.fontawesome.com/052f08435e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -147,8 +149,8 @@
         <li>
           <h3>IR 정보</h3>
           <ul class="ir">
-            <li> <a href="#">IR 정보</a> </li>
-            <li> <a href="#">배당조회</a> </li>
+            <li> <a href="#">IR 정보<i class="fa-solid fa-arrow-up-right-from-square"></i></a> </li>
+            <li> <a href="#">배당조회<i class="fa-solid fa-arrow-up-right-from-square"></i></a> </li>
           </ul>
         </li>
         <hr style="border:0; width:1px; background: #ddd;">
