--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
 </head>
 
 <body>
+
+  <nav class="top-btn">
+    <a href="">
+      <img src="./img/top-button.png" alt="">
+    </a>
+  </nav>
+
   <header class="top_main">
 
     <div class="main_header">
       <div class="inner_wrap">
-        <div class="img-log"><a href="#"></a></div>
+        <div class="img-log"></div>
         <ul>
           <li><button>모델</button></li>
           <li><button>구매/이벤트</button></li>
@@ -56,7 +63,7 @@
         <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
         <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
         <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
-        <button class="btn-2"><i class="fa-solid fa-play"></i></button>
+        <button class="btn-2 play-btn"><i class="fa-solid fa-circle-pause"></i></button>
       </div>
 
       <div class="quick-menu">
@@ -118,10 +125,30 @@
         <p>지속가능한 미래로의 연결을 추구하는 현대자동차의 브랜드 캠패인을 만나보세요.</p>
       </div>
       <div class="section-brand">
-        <button><img src="./img/hyundai-hmgics-kv-w.jpg" alt=""></button>
-        <button><img src="./img/hyundai-ioniq6-awards-kv-w.jpg" alt=""></button>
-        <button><img src="./img/hyundai-ioniq5-n-kv-w.jpg" alt=""></button>
-        <button><img src="./img/new-dedicated-ev-plant-ulsan-kv-w.jpg" alt=""></button>
+        <button>
+          <div>
+            <h3>미래 모빌리티 서비스</h3>
+            <p>현대차 그룹 싱가포르 글로벌 혁신센<br>터(HMGICS)공개</p>
+          </div><img src="./img/hyundai-hmgics-kv-w.jpg" alt="">
+        </button>
+        <button>
+          <div>
+            <h3>아이오닉 라인업</h3>
+            <p>세계에서 인정받은 아이오닉 6, 수<br>상내역으로 알아보다</p>
+          </div><img src="./img/hyundai-ioniq6-awards-kv-w.jpg" alt="">
+        </button>
+        <button>
+          <div>
+            <h3>고성능N</h3>
+            <p>고성능 전기차 아이오닉 5 N의 이야기</p>
+          </div><img src="./img/hyundai-ioniq5-n-kv-w.jpg" alt="">
+        </button>
+        <button>
+          <div>
+            <h3>울산 EV 전용공장</h3>
+            <p>오래된 미래의 시작, 실현 그리고 또 다른 꿈</p>
+          </div><img src="./img/new-dedicated-ev-plant-ulsan-kv-w.jpg" alt="">
+        </button>
       </div>
     </div>
   </section>
