--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div>
           <a href=""><b style="font-weight: bold;">Trendy</b>Hyundai</a>
 
-          <button class="btn-1">kr<i class="fa-solid fa-caret-down"></i></button>
+          <button class="btn-1">KR<i class="fa-solid fa-caret-down"></i></button>
           <button><i class="fa-solid fa-user"></i></button>
           <button><i class="fa-solid fa-magnifying-glass"></i></button>
           <button><i class="fa-solid fa-bars"></i></button>
