--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <footer>
     <div class="inner">
       <ul class="footer1">
-        <li>
+        <li class="logo">
           <img src="./img/logo_footer.png" alt="logo-footer">
         </li>
         <li>
@@ -189,6 +189,9 @@
           </ul>
           <p>고객센터 : 080-600-6000</p>
           <p>COPYRIGHT ⓒ HYUNDAI MOTOR COMPANY. ALL RIGHTS RESERVED.</p>
+        </li>
+        <li class="link">
+          <img src="./img/스크린샷 2024-02-05 163152.png" alt="link-footer">
         </li>
       </ul>
 
