--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div><a class="text-4">The new Tuscson</a></div>
       <a class="main-content"></a>
 
-      <div>
+      <div class="container-btn">
         <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
         <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
         <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
