--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <!-- 파비콘 넣기 -->
-  <link rel="shortcut icon" href="" type="icon/x-icon">
+  <link rel="shortcut icon" href="./img/현대파비콘.svg" type="icon/x-icon">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./css/main.css">
@@ -112,6 +112,8 @@
     </div>
 
     </div>
+
+    
 
 
   </section>
