--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>현대자동차 - 현대닷컴 | 대한민국 대표 자동차 회사 hyundai.com</title>
   <!-- 파비콘 넣기 -->
-  <link rel="shortcut icon" href="" type="icon/x-icon">
+  <link rel="shortcut icon" href="./img/favicon.ico" type="icon/x-icon">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./css/main.css">
@@ -332,6 +332,10 @@
           </a>
         </li>
       </ul>
+      <div class="bottom-button">
+        <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
+        <button class="btn-2"><i class="fa-solid fa-circle"></i></button>
+      </div>
     </div>
   </section>
 
