--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
         <button>
           <div>
             <h3>미래 모빌리티 서비스</h3>
-            <p>현대차 그룹 싱가포르 글로벌 혁신센<br>터(HMGICS)공개</p>
+            <p>현대차 그룹 싱가포르 글로벌 혁신센터(HMGICS)공개</p>
           </div><img src="./img/hyundai-hmgics-kv-w.jpg" alt="">
         </button>
         <button>
           <div>
             <h3>아이오닉 라인업</h3>
-            <p>세계에서 인정받은 아이오닉 6, 수<br>상내역으로 알아보다</p>
+            <p>세계에서 인정받은 아이오닉 6, 수상내역으로 알아보다</p>
           </div><img src="./img/hyundai-ioniq6-awards-kv-w.jpg" alt="">
         </button>
         <button>
