--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div>
           <a href=""><b style="font-weight: bold;">Trendy</b>Hyundai</a>
 
-          <button class="btn-1">KR<i class="fa-solid fa-caret-down"></i></button>
+          <button class="btn-1">KR <i class="fa-solid fa-caret-down"></i></button>
           <button><i class="fa-solid fa-user"></i></button>
           <button><i class="fa-solid fa-magnifying-glass"></i></button>
           <button><i class="fa-solid fa-bars"></i></button>
@@ -268,13 +268,13 @@
         <button>
           <div>
             <h3>미래 모빌리티 서비스</h3>
-            <p>현대차 그룹 싱가포르 글로벌 혁신센<br>터(HMGICS)공개</p>
+            <p class="section-brand-p1">현대차그룹 싱가포르 글로벌 혁신센터(HMGICS)공개</p>
           </div><img src="./img/hyundai-hmgics-kv-w.jpg" alt="">
         </button>
         <button>
           <div>
             <h3>아이오닉 라인업</h3>
-            <p>세계에서 인정받은 아이오닉 6, 수<br>상내역으로 알아보다</p>
+            <p>세계에서 인정받은 아이오닉 6, 수상내역으로 알아보다</p>
           </div><img src="./img/hyundai-ioniq6-awards-kv-w.jpg" alt="">
         </button>
         <button>
@@ -286,7 +286,7 @@
         <button>
           <div>
             <h3>울산 EV 전용공장</h3>
-            <p>오래된 미래의 시작, 실현 그리고 또 다른 꿈</p>
+            <p class="section-brand-p1">오래된 미래의 시작, 실현 그리고 또 다른 꿈</p>
           </div><img src="./img/new-dedicated-ev-plant-ulsan-kv-w.jpg" alt="">
         </button>
       </div>
